--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  justify-content: center;
 }
 
 .App-header {
-  background-color: #282c34;
+  width: 450px;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: #333;
+  border: 2px solid blue;
+  margin-top: 100px;
+}
+
+.App-header h1 {
+  color: blue;
+}
+
+.card-country {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  border: 8px solid lightgreen;
+  margin-top: 20px;
+}
+
+.card-country h2 {
+  color: blue;
+}
+
+.card-details {
+  width: 380px;
+  border: 1px solid #333;
+  margin-bottom: 10px;
+}
+
+.card-scores {
+  display: flex;
+  border: 1px solid #333;
+}
+
+.score {
+  width: 100px;
+  color: red;
+  margin-right: 10px;
+  text-align: right;
+}
+
+.score-name {
+  margin: auto;
+  width: 100px;
+  padding: 0 10px;
+  text-align: left;
+}
+
+button {
+  margin-bottom: 10px;
+  background-color: red;
+  padding: 10px;
+  font-size: 12px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: 600;
 }
